--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
    <meta charset="UTF-8">
    <title>Newsfeed</title>
    <link rel="stylesheet" href="static/style.css">
-   <script rel="javascript" src="js/controller.js"></script>
-   <script rel="javascript" src="js/model.js"></script>
-   <script rel="javascript" src="js/view.js"></script>
-   <script rel="javascript" src="js/object.js"></script>
+   <script type="module" src="js/app.js"></script>
 </head>
 <div id="super-div">
 
-   <body onload="new model()">
+   <body>
 
       <header id="heading">
       </header>
